--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
 			<div class="main__number" id="res">000</div>
 			<div class="input">
 				<form action="#" class="input__form" method="POST" enctype="multipart/form-data">
-					<div class="input__inner">
-						<div class="input__item"><p class="input__txt">Enter a range from: </p></div>
-						<div class="input__item"><input class="input__area" placeholder="0" tabindex="1" type="text" name="min" id="min"></div>
-						<div class="input__item"><p class="input__txt"> to: </p></div>
-						<div class="input__item"><input class="input__area" placeholder="1000" tabindex="2" type="text" name="max" id="max"></div>
+					<div class="input__block">
+						<div class="input__inner">
+							<div class="input__item"><p class="input__txt">Enter a range from: </p></div>
+							<div class="input__item"><input class="input__area" placeholder="0" tabindex="1" type="text" name="min" id="min"></div>
+						</div>
+						<div class="input__inner">
+							<div class="input__item"><p class="input__txt"> to: </p></div>
+							<div class="input__item"><input class="input__area" placeholder="1000" tabindex="2" type="text" name="max" id="max"></div>
+						</div>
 					</div>
 					<button tabindex="3" type="button" id="btn" >Enter!</button>
 				</form>
